cleaning code
git-svn-id: http://svn.aepik.net/repo/casl/trunk@97 74b971ab-bbec-4304-98d4-7dc9b701e103